@@ -1,16 +1,28 @@
 package com.skillex.service.impl;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.skillex.dto.ai.LearningPathDto;
-import com.skillex.model.*;
-import com.skillex.repository.*;
-import com.skillex.service.*;
+import com.skillex.model.LearningPath;
+import com.skillex.model.LearningPathStep;
+import com.skillex.model.Skill;
+import com.skillex.model.User;
+import com.skillex.model.UserSkillOffered;
+import com.skillex.repository.LearningPathRepository;
+import com.skillex.repository.SkillRepository;
+import com.skillex.repository.UserRepository;
+import com.skillex.repository.UserSkillOfferedRepository;
+import com.skillex.service.LearningPathService;
+import com.skillex.service.NoteGenerationService;
+import com.skillex.service.ProgressService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -19,9 +31,10 @@ public class LearningPathServiceImpl implements LearningPathService {
     private final LearningPathRepository learningPathRepository;
     private final UserRepository userRepository;
     private final SkillRepository skillRepository;
-    private final UserSkillOfferRepository userSkillOfferRepository;
+    private final UserSkillOfferedRepository userSkillOfferedRepository;
     private final NoteGenerationService noteGenerationService;
-    private final SkillGapAnalyzerService skillGapAnalyzerService;
+    private final ProgressService progressService;
+    private final ObjectMapper objectMapper;
 
     @Override
     public LearningPathDto generateAndSchedulePath(String userId, String goalSkillId, String targetLevel) {
@@ -31,29 +44,27 @@ public class LearningPathServiceImpl implements LearningPathService {
         Skill goalSkill = skillRepository.findById(goalSkillId)
             .orElseThrow(() -> new IllegalArgumentException("Goal skill not found"));
 
-        // Generate path structure via AI
         List<LearningPathDto.PathStepWithMentor> pathSteps = generatePathSteps(goalSkill, user, targetLevel);
+        if (pathSteps.isEmpty()) {
+            throw new IllegalStateException("Could not generate a mentor-backed learning path for this skill yet.");
+        }
 
-        // Create LearningPath entity
         LearningPath path = LearningPath.builder()
             .user(user)
             .goalSkill(goalSkill)
             .targetLevel(targetLevel)
-            .totalEstimatedHours(pathSteps.stream().mapToInt(s -> s.estimatedHours()).sum())
+            .totalEstimatedHours(pathSteps.stream().mapToInt(LearningPathDto.PathStepWithMentor::estimatedHours).sum())
             .estimatedCompletionAt(LocalDateTime.now().plusDays(pathSteps.size() * 7L))
             .status("ACTIVE")
             .build();
 
-        // Create steps and assign mentors
         List<LearningPathStep> steps = new ArrayList<>();
         for (int i = 0; i < pathSteps.size(); i++) {
             LearningPathDto.PathStepWithMentor pathStep = pathSteps.get(i);
-            Skill stepSkill = skillRepository.findById(pathStep.skillId())
-                .orElseThrow();
-            User mentor = userRepository.findById(pathStep.mentorId())
-                .orElseThrow();
+            Skill stepSkill = skillRepository.findById(pathStep.skillId()).orElseThrow();
+            User mentor = userRepository.findById(pathStep.mentorId()).orElseThrow();
 
-            LearningPathStep step = LearningPathStep.builder()
+            steps.add(LearningPathStep.builder()
                 .learningPath(path)
                 .skill(stepSkill)
                 .mentor(mentor)
@@ -61,9 +72,7 @@ public class LearningPathServiceImpl implements LearningPathService {
                 .estimatedHours(pathStep.estimatedHours())
                 .description(pathStep.description())
                 .scheduledSessionAt(LocalDateTime.now().plusDays((long) (i + 1) * 7))
-                .build();
-
-            steps.add(step);
+                .build());
         }
 
         path.setSteps(steps);
@@ -75,107 +84,103 @@ public class LearningPathServiceImpl implements LearningPathService {
     @Override
     @Transactional(readOnly = true)
     public List<LearningPathDto> listUserPaths(String userId) {
-        List<LearningPath> paths = learningPathRepository.findByUserIdAndStatus(userId, "ACTIVE");
-        return paths.stream()
+        return learningPathRepository.findByUserIdAndStatus(userId, "ACTIVE").stream()
             .map(this::convertToDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
-    public void completeStep(String pathId, int stepOrder) {
-        LearningPath path = learningPathRepository.findById(pathId)
-            .orElseThrow(() -> new IllegalArgumentException("Path not found"));
+    public void completeStep(String userId, String pathId, int stepOrder) {
+        LearningPath path = findOwnedPath(userId, pathId);
 
         LearningPathStep step = path.getSteps().stream()
-            .filter(s -> s.getStepOrder() == stepOrder)
+            .filter(candidate -> candidate.getStepOrder() == stepOrder)
             .findFirst()
             .orElseThrow(() -> new IllegalArgumentException("Step not found"));
 
+        if (step.isCompleted()) {
+            return;
+        }
         step.setCompleted(true);
-        path.setCompletedSteps(path.getCompletedSteps() + 1);
 
-        if (path.getCompletedSteps() == path.getSteps().size()) {
+        long completed = path.getSteps().stream().filter(LearningPathStep::isCompleted).count();
+        path.setCompletedSteps((int) completed);
+        if (completed == path.getSteps().size()) {
             path.setStatus("COMPLETED");
+            progressService.awardXp(userId, "LEARNING_PATH_COMPLETED", path.getId(), 40, "Completed learning path for " + path.getGoalSkill().getName() + ".");
         }
 
         learningPathRepository.save(path);
+        progressService.awardXp(userId, "LEARNING_PATH_STEP", path.getId() + ":" + stepOrder, 10, "Completed " + step.getSkill().getName() + " in a learning path.");
     }
 
     @Override
-    public void cancelPath(String pathId) {
-        LearningPath path = learningPathRepository.findById(pathId)
-            .orElseThrow(() -> new IllegalArgumentException("Path not found"));
+    public void cancelPath(String userId, String pathId) {
+        LearningPath path = findOwnedPath(userId, pathId);
         path.setStatus("CANCELLED");
         learningPathRepository.save(path);
     }
 
+    private LearningPath findOwnedPath(String userId, String pathId) {
+        LearningPath path = learningPathRepository.findById(pathId)
+            .orElseThrow(() -> new IllegalArgumentException("Path not found"));
+        if (!path.getUser().getId().equals(userId)) {
+            throw new org.springframework.security.access.AccessDeniedException("This learning path belongs to another user.");
+        }
+        return path;
+    }
+
     private List<LearningPathDto.PathStepWithMentor> generatePathSteps(Skill goalSkill, User user, String targetLevel) {
+        List<CatalogOption> catalogOptions = skillRepository.findAll().stream()
+            .map(skill -> new CatalogOption(skill, countMentors(skill.getId(), user.getId())))
+            .filter(option -> option.mentorCount() > 0)
+            .limit(80)
+            .toList();
+
+        String currentSkills = user.getSkillsOffered() == null
+            ? "none"
+            : user.getSkillsOffered().stream().map(Skill::getName).reduce((a, b) -> a + ", " + b).orElse("none");
+        String catalog = catalogOptions.stream()
+            .map(option -> "%s|%s|%s|mentors=%d".formatted(
+                option.skill().getId(),
+                option.skill().getName(),
+                option.skill().getCategory(),
+                option.mentorCount()
+            ))
+            .reduce((a, b) -> a + "\n" + b)
+            .orElse("none");
+
         String prompt = String.format("""
-            Generate a detailed, ordered learning path to master "%s" at "%s" level.
-            Current user skills: %s
+            You are SkillEX's AI path planner.
 
-            Create 3-5 specific steps with:
-            1. Skill name
-            2. Why it's needed (reason)
-            3. Estimated hours (5-20)
+            Goal skill: "%s"
+            Target level: "%s"
+            User already teaches/knows: %s
+            Available catalog skills with mentors, one per line:
+            %s
 
-            Format as JSON:
+            Generate a mentor-backed learning path.
+            Rules:
+            - Return ONLY valid JSON. No markdown.
+            - Use 3 to 5 steps.
+            - Choose ONLY skill ids from the provided catalog list.
+            - Include the goal skill as the final or near-final step when it has mentors.
+            - Do not include a skill already known unless it is essential as a deeper review.
+            - Description must be practical, specific, and explain the learning outcome.
+
+            JSON schema:
             {
               "steps": [
-                {"name": "Skill", "reason": "...", "hours": 10}
+                {"skillId": "catalog-id", "description": "What to learn and why", "hours": 10}
               ]
             }
-            """,
-            goalSkill.getName(),
-            targetLevel,
-            user.getSkillsOffered().stream().map(Skill::getName).collect(Collectors.joining(", "))
+            """, goalSkill.getName(), targetLevel, currentSkills, catalog);
+
+        List<LearningPathDto.PathStepWithMentor> steps = parseAiSteps(
+            noteGenerationService.generateWithOllama(prompt),
+            user.getId()
         );
 
-        String response = noteGenerationService.generateWithOllama(prompt);
-
-        // Parse response and find mentors for each step
-        List<LearningPathDto.PathStepWithMentor> steps = new ArrayList<>();
-
-        // Simplified parsing (production would use Jackson)
-        String[] lines = response.split("\n");
-        int stepNum = 1;
-
-        for (String line : lines) {
-            if (line.contains("\"name\"")) {
-                String skillName = extractJsonString(line, "name");
-                String reason = extractJsonString(line, "reason");
-                int hours = extractJsonInt(line, "hours");
-
-                if (!skillName.isEmpty()) {
-                    Skill stepSkill = skillRepository.findByNameIgnoreCase(skillName)
-                        .orElseGet(() -> Skill.builder()
-                            .name(skillName)
-                            .category(goalSkill.getCategory())
-                            .icon("📚")
-                            .build());
-
-                    // Find best mentor for this step
-                    User mentor = findBestMentorForSkill(stepSkill.getId(), user.getId());
-
-                    if (mentor != null) {
-                        steps.add(new LearningPathDto.PathStepWithMentor(
-                            stepNum++,
-                            stepSkill.getId(),
-                            skillName,
-                            reason.isEmpty() ? "Master this skill" : reason,
-                            hours == 0 ? 10 : hours,
-                            mentor.getId(),
-                            mentor.getName(),
-                            mentor.getAvatar(),
-                            LocalDateTime.now().plusDays(stepNum * 7L),
-                            false
-                        ));
-                    }
-                }
-            }
-        }
-
-        // Ensure at least one step
         if (steps.isEmpty()) {
             User mentor = findBestMentorForSkill(goalSkill.getId(), user.getId());
             if (mentor != null) {
@@ -183,7 +188,7 @@ public class LearningPathServiceImpl implements LearningPathService {
                     1,
                     goalSkill.getId(),
                     goalSkill.getName(),
-                    "Master the fundamentals and advanced techniques",
+                    "AI could not produce a full path, so start directly with a mentor-backed fundamentals session.",
                     20,
                     mentor.getId(),
                     mentor.getName(),
@@ -197,12 +202,67 @@ public class LearningPathServiceImpl implements LearningPathService {
         return steps;
     }
 
+    private List<LearningPathDto.PathStepWithMentor> parseAiSteps(String response, String userId) {
+        List<LearningPathDto.PathStepWithMentor> steps = new ArrayList<>();
+        try {
+            JsonNode root = objectMapper.readTree(extractJsonObject(response));
+            JsonNode stepNodes = root.path("steps");
+            if (!stepNodes.isArray()) {
+                return steps;
+            }
+
+            int order = 1;
+            for (JsonNode node : stepNodes) {
+                String skillId = node.path("skillId").asText("");
+                Skill skill = skillId.isBlank()
+                    ? skillRepository.findByNameIgnoreCase(firstText(node, "skillName", "name")).orElse(null)
+                    : skillRepository.findById(skillId).orElse(null);
+                if (skill == null) {
+                    continue;
+                }
+
+                User mentor = findBestMentorForSkill(skill.getId(), userId);
+                if (mentor == null) {
+                    continue;
+                }
+
+                int hours = node.path("hours").asInt(node.path("estimatedHours").asInt(10));
+                String description = firstText(node, "description", "reason", "rationale");
+                steps.add(new LearningPathDto.PathStepWithMentor(
+                    order++,
+                    skill.getId(),
+                    skill.getName(),
+                    description.isBlank() ? "AI-selected step to build toward your goal skill." : description,
+                    Math.max(3, Math.min(hours, 40)),
+                    mentor.getId(),
+                    mentor.getName(),
+                    mentor.getAvatar(),
+                    LocalDateTime.now().plusDays(order * 7L),
+                    false
+                ));
+            }
+        } catch (Exception ignored) {
+            return steps;
+        }
+        return steps;
+    }
+
+    private int countMentors(String skillId, String excludeUserId) {
+        try {
+            return (int) userSkillOfferedRepository.findBySkillId(skillId).stream()
+                .filter(offer -> !offer.getUser().getId().equals(excludeUserId))
+                .count();
+        } catch (Exception e) {
+            return 0;
+        }
+    }
+
     private User findBestMentorForSkill(String skillId, String excludeUserId) {
         try {
-            return userSkillOfferRepository.findBySkillId(skillId).stream()
-                .filter(o -> !o.getUser().getId().equals(excludeUserId))
-                .map(UserSkillOffer::getUser)
-                .min(Comparator.comparingInt(u -> -(u.getSessionsCompleted() != null ? u.getSessionsCompleted() : 0)))
+            return userSkillOfferedRepository.findBySkillId(skillId).stream()
+                .filter(offer -> !offer.getUser().getId().equals(excludeUserId))
+                .map(UserSkillOffered::getUser)
+                .min(Comparator.comparingInt(user -> -(user.getSessionsCompleted() != null ? user.getSessionsCompleted() : 0)))
                 .orElse(null);
         } catch (Exception e) {
             return null;
@@ -223,7 +283,7 @@ public class LearningPathServiceImpl implements LearningPathService {
                 step.getScheduledSessionAt(),
                 step.isCompleted()
             ))
-            .collect(Collectors.toList());
+            .toList();
 
         return new LearningPathDto(
             path.getId(),
@@ -240,15 +300,32 @@ public class LearningPathServiceImpl implements LearningPathService {
         );
     }
 
-    private String extractJsonString(String line, String key) {
-        String pattern = "\"" + key + "\"\\s*:\\s*\"([^\"]+)\"";
-        java.util.regex.Matcher m = java.util.regex.Pattern.compile(pattern).matcher(line);
-        return m.find() ? m.group(1) : "";
+    private String firstText(JsonNode node, String... keys) {
+        for (String key : keys) {
+            String value = node.path(key).asText("");
+            if (!value.isBlank()) {
+                return value;
+            }
+        }
+        return "";
     }
 
-    private int extractJsonInt(String line, String key) {
-        String pattern = "\"" + key + "\"\\s*:\\s*(\\d+)";
-        java.util.regex.Matcher m = java.util.regex.Pattern.compile(pattern).matcher(line);
-        return m.find() ? Integer.parseInt(m.group(1)) : 0;
+    private String extractJsonObject(String response) {
+        if (response == null || response.isBlank()) {
+            return "{}";
+        }
+        String text = response.trim();
+        if (text.contains("```json")) {
+            text = text.substring(text.indexOf("```json") + 7);
+            text = text.substring(0, text.indexOf("```"));
+        } else if (text.contains("```")) {
+            text = text.substring(text.indexOf("```") + 3);
+            text = text.substring(0, text.indexOf("```"));
+        }
+        int start = text.indexOf('{');
+        int end = text.lastIndexOf('}');
+        return start >= 0 && end > start ? text.substring(start, end + 1) : text;
     }
+
+    private record CatalogOption(Skill skill, int mentorCount) {}
 }
